sumo/tests/dfrouter/errors/triple_minus3/errors.dfrouter.exe
Error: On processing option '---net-file':
 No option with the name '-net-file' exists.
Error: The parameter 'net.net.xml' is not allowed in this context
Error: Switch or parameter name expected.
